# CetoneSynth2

./: CMakeLists.txt
images/: CS2_Art.hpp  buttons.xcf  gen_image_resource.sh  knob_normal.xcf
images/backup/: images_backup.7z
src/: CetoneSynth2.cpp  CetoneSynth2.h  CetoneSynth2_DPF.cpp  DistrhoPluginInfo.h  Gui.cpp  Gui.h  GuiHelper.cpp  Gui_DPF.cpp  Gui_DPF.hpp  MSVC_Compatibility.hpp  Synth.cpp  VST2.4_Compatibility.hpp  arp.cpp  defines.h  full_parameters.cpp  full_parameters.hpp  log.cpp  osc.h  parameters.h  statics.cpp  statics.h  svoice.cpp  svoice.h
